# DERMS

./: .env.example  .gitignore  BRANCHING_STRATEGY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql-analysis.yml
config/edge/: site_config.yaml
config/mosquitto/: mosquitto.conf
config/thingsboard/: asset_hierarchy.json
data/: sample_load_profile.csv
docs/: api_reference.md  architecture.md  getting_started.md
docs/architecture/: vpp_refined_architecture.md
notebooks/: eda_energy_resources.ipynb
scripts/: run_simulation.py  seed_data.py  setup_branch_protection.sh
src/: __init__.py  main.py
src/api/: __init__.py  routes.py
src/app/: App.tsx  AppV1.tsx  AppV2.tsx
src/app/components/: AlarmTable.tsx  BESSStateOfCharge.tsx  FrequencyGauge.tsx  GridStatusIndicator.tsx  KPICards.tsx  LoadSheddingCalendar.tsx  PowerFlowMeter.tsx  Sidebar.tsx  SiteMap.tsx  SolarPVOutput.tsx  TopNavigation.tsx
src/app/components/v2/: ActiveAlarms.tsx  BurgerMenu.tsx  DashboardHeader.tsx  DispatchSchedule.tsx  PowerFlowTrend.tsx  QuickStatsBar.tsx  RaspberryPiGateways.tsx  SavingsMetrics.tsx  SiteList.tsx  SustainabilityMetrics.tsx  WidgetCard.tsx
src/app/components/v2/views/: BatteryDetailView.tsx  PowerFlowDetailView.tsx  SitesDetailView.tsx
src/core/: __init__.py  derms_engine.py  optimizer.py
src/models/: __init__.py  battery.py  load_forecaster.py  solar.py
src/services/: __init__.py  grid_interface.py  telemetry.py
src/styles/: theme.css
src/utils/: __init__.py  config.py  logger.py
src/vpp/: __init__.py  aggregator.py
src/vpp/cloud/: __init__.py  asset_provisioner.py  thingsboard_client.py
src/vpp/edge/: __init__.py  dispatch_agent.py  modbus_writer.py  mqtt_bridge.py  offline_buffer.py
tests/integration/: test_api.py
tests/unit/: test_battery.py  test_forecaster.py  test_optimizer.py
tests/vpp/: __init__.py  test_dispatch_agent.py  test_mqtt_bridge.py  test_offline_buffer.py
