[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "derms"
version = "0.1.0"
description = "Virtual Power Plant — Distributed Energy Resource Management System"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "AUREX-ML", email = "contact@aurex-ml.example.com" }]
requires-python = ">=3.11"
keywords = ["energy", "vpp", "derms", "battery", "solar", "optimization", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "scipy>=1.13.0",
    "scikit-learn>=1.4.2",
    "paho-mqtt>=2.0.0",
    "redis[hiredis]>=5.0.4",
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.6",
    "httpx>=0.27.0",
    "black>=24.4.2",
    "flake8>=7.0.0",
    "isort>=5.13.2",
    "mypy>=1.10.0",
    "pip-audit>=2.7.3",
]
simulation = [
    "gymnasium>=0.29.1",
    "stable-baselines3>=2.3.2",
]

[project.urls]
Homepage = "https://github.com/AUREX-ML/DERMS"
Documentation = "https://github.com/AUREX-ML/DERMS/tree/main/docs"
"Bug Tracker" = "https://github.com/AUREX-ML/DERMS/issues"

[project.scripts]
derms-sim = "scripts.run_simulation:main"
derms-seed = "scripts.seed_data:main"

# ── Tool configuration ────────────────────────────────────────────────────────

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["src"]
skip_glob = [".venv/*", "build/*", "dist/*"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
no_strict_optional = true
warn_unused_ignores = true
warn_return_any = false
show_error_codes = true
exclude = ["build/", "dist/", ".venv/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--tb=short -q"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "scripts/*", "*.pyc"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 60
